Refactor: move js to own file

--- a/index.html
+++ b/index.html
@@ -5,209 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="mobile-web-app-capable" content="yes">
     <link rel="stylesheet" type="text/css" href="vvs.css">
-    <script>
-        /* Engelboldstraße 5000008 */
-        /* Kaltental 5006009 */
-        /* Im Elsental 5002578 */
-        /* Österfeld */
-        var stations = [
-                    ['5000008', ['Vaihingen', 'Vaihingen Bf'], ['']],
-                    ['5006009', ['Mineralbäder', 'Fellbach', 'Fellbach Lutherkirche', 'Heslach Vogelrain', 'Heslach'], ['Vaihingen', 'Vaihingen Bf', '- Betriebsfahrt -']],
-                    ['5002578', ['Rohr Mitte', 'Leinfelden'], ['']],
-                    ['5006027', [''], ['']]
-        ];
-
-        function init() {
-            if ('ontouchstart' in document.documentElement) {
-                addTouchListener();
-            }
-            addAllStations()
-            updateStations(true);
-            updateClock();
-        }
-
-        function addAllStations() {
-            for (var index = 0; index < stations.length; index++) {
-              var stationDiv = document.createElement('div');
-              stationDiv.id = stations[index][0];
-              stationDiv.classList.add('station');
-              var stationNameDiv = document.createElement('div');
-              stationNameDiv.classList.add('stationName');
-              stationNameDiv.id = "stationName" + stations[index][0];
-              stationDiv.appendChild(stationNameDiv);
-              var connectionsDiv = document.createElement('div');
-              connectionsDiv.id = "connections" + stations[index][0];
-              connectionsDiv.classList.add('connections');
-              stationDiv.appendChild(connectionsDiv);
-              document.getElementById('stations').appendChild(stationDiv);
-            }
-        }
-
-        function updateClock() {
-            document.getElementById('clock').innerText = new Date().toLocaleTimeString();
-            setTimeout(function() {updateClock();}, 1 * 1000);
-        }
-
-        function updateTimeToUpdate(time) {
-            setTimeout(function() {
-                time = time - 1000;
-                if (0 <= time) {
-                    setUpdateTimeToUpdateText(time);
-                    updateTimeToUpdate(time);
-                }
-            }, 1000);
-        }
-
-        function setUpdateTimeToUpdateText(time) {
-                var text = 'Aktualisiere...';
-                if (!document.getElementById('next-update-icon').classList.contains('spin')) {
-                    text = "Aktualisierung in " + time / 1000 + " s";
-                }
-                document.getElementById('next-update').innerText = text;
-        }
-
-        function updateStations(withTimeout) {
-            if (withTimeout) {
-                var time = 120 * 1000;
-                setTimeout(function() {updateStations(true);}, time);
-                updateTimeToUpdate(time);
-            }
-            for (var index = 0; index < stations.length; index++) {
-                updateStation(stations[index][0], stations[index][1], stations[index][2]);
-            }
-            document.getElementById('next-update-icon').classList.add('spin');
-            setUpdateTimeToUpdateText(0);
-            setTimeout(function() {
-                document.getElementById('next-update-icon').classList.remove('spin');
-            }, 1000);
-        }
-
-        function updateStation(stationId, directions, ignoreDirections) {
-            var vvsRequest = new XMLHttpRequest();
-            vvsRequest.open("GET", "https://efa-api.asw.io/api/v1/station/" + stationId + "/departures/", true);
-            vvsRequest.setRequestHeader("Content-type","application/json");
-            vvsRequest.onreadystatechange = function() {
-                if (this.readyState == 4 && this.status == 200) {
-                    addConnections(stationId, directions, ignoreDirections, this.responseText);
-                }
-            }
-            vvsRequest.send();
-        }
-
-        function addConnections(stationId, directions, ignoreDirections, connections) {
-            var stationDiv = document.getElementById("stationName" + stationId);
-            var connectionsDiv = document.getElementById('connections' + stationId);
-            while (connectionsDiv.firstChild) {
-                connectionsDiv.removeChild(connectionsDiv.firstChild);
-            }
-            var numberOfStationsAdded = 0;
-            for (var i = 0; i < 10000; i++) {
-                var connection = JSON.parse(connections)[i];
-                stationDiv.innerText = connection['stopName'];
-                if (!arrayContains(connection['direction'], directions) ) {
-                    if (!arrayContains(connection['direction'], ignoreDirections)) {
-                        console.log('Connection excluded', connection['direction'], directions);
-                        var debugging = document.getElementById('debugging');
-                        debugging.innerText = "Folgende Verbindungen wurden nicht berücksichtigt (Fehler!):";
-                        var debuggingUl = document.getElementById('debuggingUl');
-                        console.log(debuggingUl);
-                        var p = document.createElement("li");
-                        p.innerText = "Von " + connection['stopName'] + " nach " + connection['direction'] + ". Erlaubte Ziele: " + directions;
-                        debuggingUl.appendChild(p);
-                    }
-                    continue;
-                }
-                var connectionDiv = document.createElement('div');
-                connectionDiv.classList.add('connection');
-
-                var timeSpan = document.createElement("span");
-                timeSpan.classList.add('time-span');
-                connectionDiv.appendChild(timeSpan);
-                timeSpan.appendChild(getTime(connection));
-                timeSpan.appendChild(getDelay(connection));
-                connectionDiv.appendChild(addDirection(connection));
-                connectionsDiv.appendChild(connectionDiv);
-                numberOfStationsAdded++;
-                if (numberOfStationsAdded === 4) {
-                    break;
-                }
-            }
-        }
-
-        function getTime(connection) {
-            var connectionP = document.createElement("span");
-            var hour = connection['departureTime']['hour'];
-            if (hour < 10) {
-                hour = "0" + hour;
-            }
-            var minutes = connection['departureTime']['minute'];
-            if (minutes < 10) {
-                minutes = "0" + minutes;
-            }
-            connectionP.innerText = hour + ":" + minutes;
-            return connectionP;
-        }
-
-        function getDelay(connection) {
-            var delaySpan = document.createElement("span");
-            var delay = connection['delay'];
-            if (parseInt(delay) != 0) {
-                delaySpan.classList.add('delay');
-                delaySpan.innerText = " +" + delay;
-            }
-            return delaySpan;
-        }
-
-        function addDirection(connection) {
-            var root = document.createElement("span");
-            var arrowP = document.createElement("span");
-            var image = document.createElement('img');
-            var directionP  = document.createElement("span");
-            root.appendChild(arrowP);
-            root.appendChild(image);
-            root.appendChild(directionP);
-
-            var number_ = connection['number'];
-            if (number_.startsWith('S')) {
-                image.src = 'https://www.vvs.de/typo3conf/ext/vvs_efa_monitor/Resources/Public/Images/icon.sbahn.20.png';
-            } else if (number_.startsWith('U')) {
-                image.src = 'https://www.vvs.de/typo3conf/ext/vvs_efa_monitor/Resources/Public/Images/icon.ubahn.20.png'
-            } else {
-                image.src = 'https://www.vvs.de/typo3conf/ext/vvs_efa_monitor/Resources/Public/Images/icon.bus.20.png';
-            }
-            arrowP.innerText = " → ";
-            directionP.innerText = " " + number_ + ": " + connection['direction'];
-            return root;
-        }
-
-        function fadeOut() {
-            document.getElementById('black-div').classList.add('fade-out');
-            document.getElementById('copyright').style.zIndex = -1;
-        }
-
-        function fadeIn() {
-            document.getElementById('black-div').classList.remove('fade-out');
-            document.getElementById('copyright').style.zIndex = 0;
-        }
-
-        function addTouchListener() {
-            var delayBeforeFade = 30 * 1000;
-            var timeout = setTimeout(fadeOut, delayBeforeFade);
-            window.addEventListener('touchstart', function() {
-                clearTimeout(timeout);
-                updateStations(false);
-                fadeIn();
-                timeout = setTimeout(fadeOut, delayBeforeFade);
-            });
-        }
-
-        function arrayContains(needle, arraystack) {
-            if (arraystack.indexOf('') != -1) {
-                return true;
-            }
-            return (arraystack.indexOf(needle) > -1);
-        }
-    </script>
+    <script src="vvs.js"></script>
 </head>
 <body onload="init()">
 <div id="black-div"></div>
