Refactor: simplfy code by using id selectors

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <div id="black-div"></div>
 <div>
     <img class="next-update icon" id="next-update-icon" src="https://www.publicdomainpictures.net/pictures/50000/velka/hourglass-silhouette.jpg"></img><div id="next-update" class="next-update"></div>
-    <div id="clock" class="clock"></div>
+    <div id="clock"></div>
 </div>
-<div id="stations" class="stations"></div>
+<div id="stations"></div>
 <div>
     <div id="debugging"></div>
     <ul id="debuggingUl"></ul>
 </div>
-<div id="copyright" class="copyright">(c) googol42 - Licensed under <a href="http://www.gnu.org/licenses/agpl-3.0.en.html">AGPL</a> Version 3 or any later Version - <a href="https://github.com/googol42/vvs-station-monitor/archive/gh-pages.zip">Source</a> - Proudly made using Linux, git and vim.</p></div>
+<div id="copyright">(c) googol42 - Licensed under <a href="http://www.gnu.org/licenses/agpl-3.0.en.html">AGPL</a> Version 3 or any later Version - <a href="https://github.com/googol42/vvs-station-monitor/archive/gh-pages.zip">Source</a> - Proudly made using Linux, git and vim.</p></div>
 </body>
 </html>
