--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="clock"></div>
 </div>
 <div id="stations"></div>
+<div id="traffic"></div>
 <div>
     <div id="debugging"></div>
     <ul id="debuggingUl"></ul>
