--- a/index.html
+++ b/index.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>VVS Station Monitor</title>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="mobile-web-app-capable" content="yes">
-    <link rel="stylesheet" type="text/css" href="vvs.css">
-    <script src="vvs.js"></script>
+    <link rel="stylesheet" href="vendor/bootstrap-4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/vvs.css">
 </head>
 <body onload="init()">
 <div id="black-div"></div>
-<div>
-    <img class="next-update icon" id="next-update-icon" src="https://www.publicdomainpictures.net/pictures/50000/velka/hourglass-silhouette.jpg"></img><div id="next-update" class="next-update"></div>
-    <div id="clock"></div>
+<div class="container-fluid">
+    <div class="row justify-content-between align-middle mt-2">
+        <div class="col">
+            <div id="next-update-icon" class="spinner-border spinner-border" role="status">
+            </div>
+            <span id="next-update" class="h5"></span>
+        </div>
+        <div class="col">
+            <div id="clock" class="text-right h5">
+            </div>
+        </div>
+    </div>
+    <div id="stations" class="row">
+    </div>
+    <div class="row">
+        <div class="col">
+            <div id="debugging"></div>
+            <ul id="debuggingUl"></ul>
+        </div>
+    </div>
 </div>
-<div id="stations"></div>
-<div>
-    <div id="debugging"></div>
-    <ul id="debuggingUl"></ul>
-</div>
-<div id="copyright">(c) googol42 - Licensed under <a href="http://www.gnu.org/licenses/agpl-3.0.en.html">AGPL</a> Version 3 or any later Version - <a href="https://github.com/googol42/vvs-station-monitor/archive/gh-pages.zip">Source</a> - Proudly made using Linux, git and vim.</p></div>
+<footer class="fixed-bottom bg-white small">(c) googol42 - Licensed under <a href="http://www.gnu.org/licenses/agpl-3.0.en.html">AGPL</a> Version 3 or any later Version - <a href="https://github.com/googol42/vvs-station-monitor/archive/gh-pages.zip">Source</a> - Proudly made using Linux, git and vim.</footer>
+
+<script src="vendor/jquery-3.4.1.slim/jquery-3.4.1.slim.min.js"></script>
+<script src="vendor/bootstrap-4.4.1/js/bootstrap.min.js"></script>
+<script src="js/vvs.js"></script>
 </body>
 </html>
