--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/vvs.css">
 </head>
 <body onload="init()">
-<div id="black-div"></div>
+<div id="black-div" class="w-100 h-100"></div>
 <div class="container-fluid">
     <div class="row justify-content-between align-middle mt-2">
         <div class="col">
