Feature: improve column spacing

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <div id="black-div" class="w-100 h-100"></div>
 <div class="container-fluid">
     <div class="row justify-content-between align-middle mt-2">
-        <div class="col">
+        <div class="col-9 pr-0">
             <div id="next-update-icon" class="spinner-border" role="status">
             </div>
             <span id="next-update" class="h5"></span>
         </div>
-        <div class="col">
+        <div class="col-3 pl-0">
             <div id="clock" class="text-right h5">
             </div>
         </div>
