Fix: remove not affective css class

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body onload="init()">
 <div id="black-div" class="w-100 h-100"></div>
 <div class="container-fluid">
-    <div class="row justify-content-between align-middle mt-2">
+    <div class="row justify-content-between mt-2">
         <div class="col-9 pr-0">
             <div id="next-update-icon" class="spinner-border" role="status">
             </div>
