--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="container-fluid">
     <div class="row justify-content-between mt-2">
         <div class="col-9 pr-0">
-            <div id="next-update-icon" class="spinner-border" role="status">
+            <div id="next-update-icon" class="spinner-border spinner-border-sm" role="status">
             </div>
             <span id="next-update" class="h5"></span>
         </div>
